[package]
name = "fun-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
ash = "0.38.0"
bevy = "0.15.3"
cgmath = "0.18.0"
crossterm = "0.28.1"
failure = "0.1.8"
getopts = "0.2.21"
itertools = "0.14.0"
pollster = "0.4.0"
rand = "0.9.0"
serde = "1.0.217"
termion = "4.0.3"
wgpu = "24.0.1"
winit = "0.30.9"
